--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -145,20 +145,20 @@ jobs:
           APK_NAME=$(basename "$APK_FILE")
           echo "APK_NAME=$APK_NAME" >> $GITHUB_ENV
 
-      - name: Upload files to Synology NAS via FTP
+      - name: Upload files to Synology NAS via SMB
         env:
-          WEB_FTP_USERNAME: ${{ secrets.WEB_FTP_USERNAME }}
-          WEB_FTP_PASSWORD: ${{ secrets.WEB_FTP_PASSWORD }}
+          WEB_SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
+          WEB_SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
         run: |
-          FTP_URL="ftp://suh-project.synology.me/romrom/downloads/"
+          SMB_URL="smb://suh-project.synology.me/romrom/downloads/"
 
           echo "Uploading APK file ${{ env.APK_NAME }}..."
-          curl -T "${{ env.APK_FILE }}" "$FTP_URL" --user "$WEB_FTP_USERNAME:$WEB_FTP_PASSWORD" --ftp-create-dirs --ftp-pasv
+          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "put ${APK_FILE} ${APK_NAME}"
 
       - name: Update romrom-cicd-history.json
         env:
-          WEB_FTP_USERNAME: ${{ secrets.WEB_FTP_USERNAME }}
-          WEB_FTP_PASSWORD: ${{ secrets.WEB_FTP_PASSWORD }}
+          WEB_SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
+          WEB_SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
         run: |
           export TZ='Asia/Seoul'
           BUILD_DATE=$(date +"%Y-%m-%d %H:%M")
@@ -174,10 +174,14 @@ jobs:
             --arg full_commit_hash "$FULL_COMMIT_HASH" \
             '{apk_name: $apk_name, file_size: $file_size, build_date: $build_date, commit_link: $commit_link, full_commit_hash: $full_commit_hash}')
 
-          FTP_URL="ftp://suh-project.synology.me/romrom/downloads/"
-          curl -s --fail "$FTP_URL/romrom-cicd-history.json" --user "$WEB_FTP_USERNAME:$WEB_FTP_PASSWORD" > romrom-cicd-history.json || echo '{"files": []}' > romrom-cicd-history.json
+          SMB_URL="smb://suh-project.synology.me/romrom/downloads/"
+          
+          # JSON 파일을 가져와서 업데이트
+          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "get romrom-cicd-history.json || echo '{\"files\": []}'" > romrom-cicd-history.json
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
-          curl -T updated.json "$FTP_URL/romrom-cicd-history.json" --user "$WEB_FTP_USERNAME:$WEB_FTP_PASSWORD" --ftp-create-dirs --ftp-pasv
+
+          # 업데이트된 JSON 파일을 SMB로 업로드
+          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "put updated.json romrom-cicd-history.json"
 
           echo "Verifying uploaded JSON file..."
-          curl "$FTP_URL/romrom-cicd-history.json" --user "$WEB_FTP_USERNAME:$WEB_FTP_PASSWORD"
+          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "get romrom-cicd-history.json"
