--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -138,9 +138,14 @@ jobs:
       - name: Find APK file
         run: |
           APK_FILE=$(find android/app/build/outputs/ -name "*.apk" | head -n 1)
+          if [ -z "$APK_FILE" ]; then
+            echo "Error: No APK file found in android/app/build/outputs/"
+            exit 1
+          fi
           echo "APK_FILE=$APK_FILE" >> $GITHUB_ENV
           APK_NAME=$(basename "$APK_FILE")
           echo "APK_NAME=$APK_NAME" >> $GITHUB_ENV
+          echo "Found APK: $APK_FILE"
 
       - name: Upload files to Synology NAS via SMB
         env:
@@ -148,8 +153,13 @@ jobs:
           SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
         run: |
           SMB_URL="smb://suh-project.synology.me/romrom/downloads/"
-          echo "Uploading APK file ${APK_NAME}..."
-          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "put ${APK_FILE} ${APK_NAME}"
+          echo "Uploading APK file ${APK_NAME} to ${SMB_URL}..."
+          smbclient "${SMB_URL}" -U "${SMB_USERNAME}%${SMB_PASSWORD}" -p 44445 -m SMB3 -c "put ${APK_FILE} ${APK_NAME}" || {
+            echo "Error: Failed to upload ${APK_NAME}. Check SMB credentials, port, or NAS configuration."
+            smbclient "${SMB_URL}" -U "${SMB_USERNAME}%${SMB_PASSWORD}" -p 44445 -m SMB3 -c "dir" || echo "Cannot connect to SMB server."
+            exit 1
+          }
+          echo "Successfully uploaded ${APK_NAME}"
 
       - name: Update romrom-cicd-history.json
         env:
@@ -172,8 +182,15 @@ jobs:
 
           SMB_URL="smb://suh-project.synology.me/romrom/downloads/"
           
-          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "get romrom-cicd-history.json || echo '{\"files\": []}'" > romrom-cicd-history.json
+          # Download existing JSON or initialize it if it doesn't exist
+          smbclient "${SMB_URL}" -U "${SMB_USERNAME}%${SMB_PASSWORD}" -p 44445 -m SMB3 -c "get romrom-cicd-history.json" || echo '{"files": []}' > romrom-cicd-history.json
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
-          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "put updated.json romrom-cicd-history.json"
+          
+          # Upload updated JSON
+          smbclient "${SMB_URL}" -U "${SMB_USERNAME}%${SMB_PASSWORD}" -p 44445 -m SMB3 -c "put updated.json romrom-cicd-history.json" || {
+            echo "Error: Failed to upload updated romrom-cicd-history.json"
+            exit 1
+          }
           echo "Verifying uploaded JSON file..."
-          smbclient "$SMB_URL" -U "$SMB_USERNAME%$SMB_PASSWORD" -p 44445 -c "get romrom-cicd-history.json"
+          smbclient "${SMB_URL}" -U "${SMB_USERNAME}%${SMB_PASSWORD}" -p 44445 -m SMB3 -c "get romrom-cicd-history.json verified.json"
+          cat verified.json
