--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -134,72 +134,66 @@ jobs:
           SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
         run: |
           SMB_SERVER=${{ secrets.WEB_SMB_SERVER }}
-          SMB_PORT=${{ secrets.WEB_SMB_PORT }}
+          SMB_PORT=${pinpoint: ${{ secrets.WEB_SMB_PORT }}
           SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_PATH=${{ secrets.WEB_SMB_PATH }}
           PW=${{ secrets.WEB_SMB_PASSWORD }}
           TARGET_DIR="/volume1/projects/romrom/github_secret/front"
           export TZ='Asia/Seoul'
-          
-          # APK 업로드 (SMB 사용)
+
+          # APK 업로드 (SMB 유지)
           echo "Uploading APK file ${{ env.APK_NAME }} to SMB..."
-          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}" || { echo "Failed to upload APK to SMB"; exit 1; }
+          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}"
           echo "APK uploaded to SMB"
-          
-          # SSH로 동적 파일 및 romrom-github-secret.json 처리
+
+          # SSH로 동적 파일 및 JSON 처리
           echo "Deploying dynamic files and managing JSONs on Synology NAS via SSH..."
           sshpass -p "$PW" ssh -p 2022 -o StrictHostKeyChecking=no ${{ secrets.WEB_SMB_USERNAME }}@$SMB_SERVER << 'EOF'
-            # 디버깅용 출력
-            echo "Connected to Synology NAS via SSH"
-          
             # 타겟 디렉토리 생성
-            echo "$PW" | sudo -S mkdir -p "$TARGET_DIR" || { echo "Failed to create directory $TARGET_DIR"; exit 1; }
-            echo "Target directory $TARGET_DIR created or already exists"
-          
-            # 동적 파일 생성
+            echo "$PW" | sudo -S mkdir -p $TARGET_DIR
+            echo "Target directory ensured: $TARGET_DIR"
+
+            # 동적 파일 생성 (모두 TARGET_DIR에 저장)
             echo "Creating dynamic files in $TARGET_DIR..."
-            echo "${{ secrets.ENV_FILE }}" | sudo tee "$TARGET_DIR/.env" > /dev/null || echo "Failed to create .env"
-            echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d | sudo tee "$TARGET_DIR/key.jks" > /dev/null || echo "Failed to create key.jks"
-            echo "${{ secrets.KEY_PROPERTIES }}" | sudo tee "$TARGET_DIR/key.properties" > /dev/null || echo "Failed to create key.properties"
-            echo "${{ secrets.LOCAL_PROPERTIES }}" | sudo tee "$TARGET_DIR/local.properties" > /dev/null || echo "Failed to create local.properties"
-            echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | sudo tee "$TARGET_DIR/Google-services.json" > /dev/null || echo "Failed to create Google-services.json"
+            echo "${{ secrets.ENV_FILE }}" | sudo tee $TARGET_DIR/.env > /dev/null
+            echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d | sudo tee $TARGET_DIR/key.jks > /dev/null
+            echo "${{ secrets.KEY_PROPERTIES }}" | sudo tee $TARGET_DIR/key.properties > /dev/null
+            echo "${{ secrets.LOCAL_PROPERTIES }}" | sudo tee $TARGET_DIR/local.properties > /dev/null
+            echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | sudo tee $TARGET_DIR/Google-services.json > /dev/null
             echo "Dynamic files created"
-          
-            # 생성된 파일 확인
-            ls -la "$TARGET_DIR" || echo "Failed to list directory $TARGET_DIR"
-          
+
             # romrom-github-secret.json 생성/업데이트
             echo "Updating romrom-github-secret.json..."
-            TEMP_JSON="/tmp/romrom-github-secret.json"
+            TEMP_JSON=/tmp/romrom-github-secret.json
             if [ -f "$TARGET_DIR/romrom-github-secret.json" ]; then
-              echo "$PW" | sudo -S cp "$TARGET_DIR/romrom-github-secret.json" "$TEMP_JSON" || echo "Failed to copy existing romrom-github-secret.json"
+              echo "$PW" | sudo -S cp "$TARGET_DIR/romrom-github-secret.json" "$ limitingTEMP_JSON"
             else
-              echo '{"files": []}' | sudo tee "$TEMP_JSON" > /dev/null || echo "Failed to create initial romrom-github-secret.json"
+              echo '{"files": []}' | sudo tee "$TEMP_JSON" > /dev/null
             fi
-          
-            # 파일 목록 추가
+
+            # 파일 목록 추가 (원래 filepath를 JSON에 기록)
             declare -A FILEPATHS
             FILEPATHS[".env"]=".env"
             FILEPATHS["key.jks"]="android/app/keystore/key.jks"
             FILEPATHS["key.properties"]="android/key.properties"
             FILEPATHS["local.properties"]="android/local.properties"
             FILEPATHS["Google-services.json"]="android/Google-services.json"
-          
+
             for FILENAME in ".env" "key.jks" "key.properties" "local.properties" "Google-services.json"; do
               FILE_INFO=$(jq -n \
                 --arg name "$FILENAME" \
                 --arg path "$TARGET_DIR/$FILENAME" \
                 --arg filepath "${FILEPATHS[$FILENAME]}" \
-                '{name: $name, path: $path, filepath: $filepath}') || { echo "Failed to generate FILE_INFO for $FILENAME"; exit 1; }
-              jq --argjson new_file "$FILE_INFO" '.files |= (map(select(.name != $new_file.name)) + [$new_file])' "$TEMP_JSON" > "$TEMP_JSON.tmp" || { echo "Failed to update JSON for $FILENAME"; exit 1; }
-              mv "$TEMP_JSON.tmp" "$TEMP_JSON" || { echo "Failed to move temp JSON for $FILENAME"; exit 1; }
+                '{name: $name, path: $path, filepath: $filepath}')
+              jq --argjson new_file "$FILE_INFO" '.files |= (map(select(.name != $new_file.name)) + [$new_file])' "$TEMP_JSON" > "$TEMP_JSON.tmp"
+              mv "$TEMP_JSON.tmp" "$TEMP_JSON"
             done
-            echo "$PW" | sudo -S mv "$TEMP_JSON" "$TARGET_DIR/romrom-github-secret.json" || { echo "Failed to move final romrom-github-secret.json"; exit 1; }
-            echo "romrom-github-secret.json updated"
+            echo "$PW" | sudo -S mv "$TEMP_JSON" "$TARGET_DIR/romrom-github-secret.json"
+            echo "romrom-github-secret.json updated in $TARGET_DIR"
           EOF
-          
-          # romrom-cicd-history.json 업데이트 (SMB 사용)
-          echo "Updating romrom-cicd-history.json via SMB..."
+
+          # romrom-cicd-history.json 업데이트 (SMB 유지)
+          echo "Updating romrom-cicd-history.json..."
           BUILD_DATE=$(date +"%Y-%m-%d %H:%M")
           FILE_SIZE=$(stat -c%s "${{ env.APK_FILE }}")
           COMMIT_LINK="https://github.com/TEAM-ROMROM/RomRom-FE/commit/${{ github.sha }}"
