--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Repository 체크아웃 및 목록 출력
       - name: Check out repository
         uses: actions/checkout@v3
         with:
@@ -20,32 +21,41 @@ jobs:
           echo "Repository checked out"
           ls -la
 
-      - name: Create dynamic files from GitHub Secrets
+      # .env 파일 생성
+      - name: Create .env file from GitHub Secret
         run: |
-          # .env 파일 생성
           echo "${{ secrets.ENV_FILE }}" > .env
           echo ".env file created"
-          
-          # Keystore와 key.properties 설정
+          ls -la
+
+      # Keystore와 key.properties 설정
+      - name: Setup Keystore and key.properties
+        run: |
           mkdir -p android/app/keystore
           echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d > android/app/keystore/key.jks
           echo "Keystore created"
+          ls -la android/app/keystore
           echo "${{ secrets.KEY_PROPERTIES }}" > android/key.properties
           echo "key.properties created"
-          
-          # local.properties 생성 및 변수 치환
+          ls -la android/
+
+      # local.properties 생성 및 CI 변수 치환
+      - name: Create local.properties with dynamic sdk and flutter paths
+        run: |
           echo "${{ secrets.LOCAL_PROPERTIES }}" > android/local.properties
           sed -i "s|^sdk.dir=.*|sdk.dir=${ANDROID_HOME}|g" android/local.properties
           sed -i "s|^flutter.sdk=.*|flutter.sdk=${FLUTTER_HOME}|g" android/local.properties
           echo "local.properties created"
-          
-          # Google-services.json 생성
+          ls -la android/
+
+      # Google-services.json 생성
+      - name: Create Google-services.json
+        run: |
           echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/Google-services.json
           echo "Google-services.json created"
-          
-          # 생성된 파일 목록 확인
-          ls -la .env android/app/keystore/key.jks android/key.properties android/local.properties android/Google-services.json
+          ls -la android/
 
+      # Flutter 설정 및 버전 확인
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -53,45 +63,104 @@ jobs:
           cache: true
           cache-key: flutter-${{ runner.os }}-3.27.3
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Verify Flutter version
+        run: |
+          echo "Flutter setup completed"
+          flutter --version
 
+      # Flutter 및 Gradle 캐시
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-pub-
+
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      # 프로젝트 의존성 설치
+      - name: Install dependencies
+        run: |
+          flutter pub get
+          echo "Dependencies installed"
+          ls -la
+
+      # Gradle 셋업
       - name: Setup Gradle
         working-directory: android
-        run: chmod +x gradlew
+        run: |
+          chmod +x gradlew
+          echo "Gradle wrapper permissions set"
 
+      # Java 설정 및 버전 확인
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: "17"
 
+      - name: Verify Java version
+        run: |
+          echo "Java setup completed"
+          java -version
+
+      # Android SDK 설정 및 확인
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Verify Android SDK setup
+        run: echo "Android SDK setup completed"
+
+      # Ruby 설정 및 확인
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.4.1"
 
-      - name: Install Fastlane
-        run: gem install fastlane
+      - name: Verify Ruby version
+        run: |
+          echo "Ruby setup completed"
+          ruby -v
 
+      # Fastlane 설치
+      - name: Install Fastlane
+        run: |
+          gem install fastlane
+          echo "Fastlane installed"
+          fastlane --version
+
+      # 짧은 커밋 해시 계산
       - name: Calculate Short Commit Hash
         id: short_hash
         run: |
           echo "SHORT_COMMIT_HASH=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          echo "Short commit hash: ${{ env.SHORT_COMMIT_HASH }}"
 
+      # Fastlane을 이용하여 APK 빌드
       - name: Build APK with Fastlane
         run: |
           cd android
           fastlane build --verbose
+          ls -la ../build/app/outputs/flutter-apk/ || true
+          echo "APK built with Fastlane"
 
+      # APK 파일 이름 변경 및 준비
       - name: Rename and Prepare APK
         run: |
           mkdir -p ./android/app/build/outputs/apk/release/
           mv ./build/app/outputs/flutter-apk/app-release.apk ./android/app/build/outputs/apk/release/romrom-${{ env.SHORT_COMMIT_HASH }}.apk
+          echo "APK renamed to romrom-${{ env.SHORT_COMMIT_HASH }}.apk"
+          ls -la ./android/app/build/outputs/apk/release/
 
+      # APK를 아티팩트로 업로드
       - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -108,17 +177,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List repository contents for deploy
+        run: |
+          echo "Repository checked out for deploy"
+          ls -la
+
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y smbclient jq sshpass
-          echo "SMB, jq, and sshpass dependencies installed"
+          sudo apt-get install -y smbclient jq
+          echo "SMB and jq dependencies installed"
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: romrom-apk
           path: android/app/build/outputs/
+
+      - name: List downloaded structure (Debug)
+        run: |
+          ls -alR android/app/build/outputs
+          echo "Downloaded structure listed"
 
       - name: Find APK file
         run: |
@@ -128,7 +207,7 @@ jobs:
           echo "APK_NAME=$APK_NAME" >> $GITHUB_ENV
           echo "APK file found: $APK_FILE"
 
-      - name: Deploy to Synology NAS
+      - name: Upload files to Synology NAS via SMB
         env:
           SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
           SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
@@ -137,69 +216,16 @@ jobs:
           SMB_PORT=${{ secrets.WEB_SMB_PORT }}
           SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_PATH=${{ secrets.WEB_SMB_PATH }}
-          PW=${{ secrets.WEB_SMB_PASSWORD }}
-          TARGET_DIR="/volume1/projects/romrom/github_secret/front"
-          export TZ='Asia/Seoul'
-
-          # APK 업로드 (SMB 사용)
           echo "Uploading APK file ${{ env.APK_NAME }} to SMB..."
-          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}" || { echo "Failed to upload APK to SMB"; exit 1; }
+          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "mkdir $SMB_PATH; cd $SMB_PATH; put ${{ env.APK_FILE }} ${{ env.APK_NAME }}"
           echo "APK uploaded to SMB"
 
-          # SSH로 동적 파일 및 romrom-github-secret.json 처리
-          echo "Deploying dynamic files and managing JSONs on Synology NAS via SSH..."
-          sshpass -p "$PW" ssh -p 2022 -o StrictHostKeyChecking=no ${{ secrets.WEB_SMB_USERNAME }}@$SMB_SERVER << EOF
-            # 디버깅용 출력
-            echo "Connected to Synology NAS via SSH"
-
-            # 타겟 디렉토리 생성
-            echo "$PW" | sudo -S mkdir -p $TARGET_DIR || { echo "Failed to create directory $TARGET_DIR"; exit 1; }
-            echo "Target directory $TARGET_DIR created or already exists"
-
-            # 동적 파일 생성
-            echo "Creating dynamic files in $TARGET_DIR..."
-            echo "${{ secrets.ENV_FILE }}" | sudo tee $TARGET_DIR/.env > /dev/null || echo "Failed to create .env"
-            echo "${{ secrets.KEYSTORE_JKS }}" | base64 -d | sudo tee $TARGET_DIR/key.jks > /dev/null || echo "Failed to create key.jks"
-            echo "${{ secrets.KEY_PROPERTIES }}" | sudo tee $TARGET_DIR/key.properties > /dev/null || echo "Failed to create key.properties"
-            echo "${{ secrets.LOCAL_PROPERTIES }}" | sudo tee $TARGET_DIR/local.properties > /dev/null || echo "Failed to create local.properties"
-            echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | sudo tee $TARGET_DIR/Google-services.json > /dev/null || echo "Failed to create Google-services.json"
-            echo "Dynamic files created"
-
-            # 생성된 파일 확인
-            ls -la $TARGET_DIR || echo "Failed to list directory $TARGET_DIR"
-
-            # romrom-github-secret.json 생성/업데이트
-            echo "Updating romrom-github-secret.json..."
-            TEMP_JSON=/tmp/romrom-github-secret.json
-            if [ -f $TARGET_DIR/romrom-github-secret.json ]; then
-              echo "$PW" | sudo -S cp $TARGET_DIR/romrom-github-secret.json $TEMP_JSON || echo "Failed to copy existing romrom-github-secret.json"
-            else
-              echo '{"files": []}' | sudo tee $TEMP_JSON > /dev/null || echo "Failed to create initial romrom-github-secret.json"
-            fi
-
-            # 파일 목록 추가
-            declare -A FILEPATHS
-            FILEPATHS[".env"]=".env"
-            FILEPATHS["key.jks"]="android/app/keystore/key.jks"
-            FILEPATHS["key.properties"]="android/key.properties"
-            FILEPATHS["local.properties"]="android/local.properties"
-            FILEPATHS["Google-services.json"]="android/Google-services.json"
-
-            for FILENAME in ".env" "key.jks" "key.properties" "local.properties" "Google-services.json"; do
-              FILE_INFO=$(jq -n \
-                --arg name "$FILENAME" \
-                --arg path "$TARGET_DIR/$FILENAME" \
-                --arg filepath "${FILEPATHS[$FILENAME]}" \
-                '{name: $name, path: $path, filepath: $filepath}') || echo "Failed to generate FILE_INFO for $FILENAME"
-              jq --argjson new_file "$FILE_INFO" '.files |= (map(select(.name != $new_file.name)) + [$new_file])' $TEMP_JSON > $TEMP_JSON.tmp || echo "Failed to update JSON for $FILENAME"
-              mv $TEMP_JSON.tmp $TEMP_JSON || echo "Failed to move temp JSON for $FILENAME"
-            done
-            echo "$PW" | sudo -S mv $TEMP_JSON $TARGET_DIR/romrom-github-secret.json || echo "Failed to move final romrom-github-secret.json"
-            echo "romrom-github-secret.json updated"
-          EOF
-
-          # romrom-cicd-history.json 업데이트 (SMB 사용)
-          echo "Updating romrom-cicd-history.json via SMB..."
+      - name: Update romrom-cicd-history.json
+        env:
+          SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
+          SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
+        run: |
+          export TZ='Asia/Seoul'
           BUILD_DATE=$(date +"%Y-%m-%d %H:%M")
           FILE_SIZE=$(stat -c%s "${{ env.APK_FILE }}")
           COMMIT_LINK="https://github.com/TEAM-ROMROM/RomRom-FE/commit/${{ github.sha }}"
@@ -211,7 +237,15 @@ jobs:
             --arg commit_link "$COMMIT_LINK" \
             --arg full_commit_hash "$FULL_COMMIT_HASH" \
             '{apk_name: $apk_name, file_size: $file_size, build_date: $build_date, commit_link: $commit_link, full_commit_hash: $full_commit_hash}')
+          SMB_SERVER=${{ secrets.WEB_SMB_SERVER }}
+          SMB_PORT=${{ secrets.WEB_SMB_PORT }}
+          SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
+          SMB_PATH=${{ secrets.WEB_SMB_PATH }}
           smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; get romrom-cicd-history.json" || echo '{"files": []}' > romrom-cicd-history.json
+          echo "Downloaded or initialized romrom-cicd-history.json"
+          cat romrom-cicd-history.json
           jq --argjson new_build "$NEW_BUILD_INFO" '.files += [$new_build]' romrom-cicd-history.json > updated.json
-          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; put updated.json romrom-cicd-history.json" || { echo "Failed to upload romrom-cicd-history.json to SMB"; exit 1; }
+          echo "Updated romrom-cicd-history.json with new build info"
+          cat updated.json
+          smbclient "//$SMB_SERVER/$SMB_SHARE" -p "$SMB_PORT" -U "$SMB_USERNAME%$SMB_PASSWORD" -m SMB3 -d 10 -c "cd $SMB_PATH; put updated.json romrom-cicd-history.json"
           echo "Updated romrom-cicd-history.json uploaded to SMB"
