--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   logging: ^1.3.0
   permission_handler: ^11.3.1
   provider: ^6.1.5
-  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.2
 
 dev_dependencies:
